fix scroll on mobile

--- a/game/src/game.css
+++ b/game/src/game.css
@@ -75,8 +75,8 @@ body {
   left: 0;
 }
 .game {
-  /*width: 100%;
-  height: 100vh;*/
+  width: 100%;
+  height: 100vh;
 }
 @media screen and (orientation:portrait) and (max-width: 767px) {
   .portrait{
